--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
     border:none;
     transition: background-color 0.2s ease;
     }
-    input{
+    textarea{
     width:90%;
       padding: 10px;
   font-size: 30px;
@@ -113,7 +113,7 @@ font-family: 'Times New Roman', serif;
 </header>
 <div class="cal">
 <div>
-    <input type="text" id="display" placeholder="0">
+    <textarea id="display" placeholder="0" readonly></textarea>
     </div>
     <div class="span">
     <button onclick="showMessage('7')">7</button>
