--- a/Index.html
+++ b/Index.html
@@ -106,8 +106,8 @@ font-family: 'Times New Roman', serif;
 <body>
    <header>
    <div>
-   <h1 style="text-align:center";>DESIGN A CALCULATOR WITH HTML AND CSS</h1>
-   <h2 style="text-align:center";> SOFTWARE AND WEB<br> DEVELOPMENT</h2>
+   <h1 style="text-align:center";>DESIGN A CALCULATOR </h1>
+   <h2 style="text-align:center";> USING HTML,CSS & JAVASCRIPT</h2>
  <h2 style="text-align:center";>BY <br> ADAMU JARIAT</h2>
 </div>
 </header>
